lsp: tests pass